--- a/mapstylesheet.css
+++ b/mapstylesheet.css
@@ -41,15 +41,21 @@ aside{
 
 .button{
 	display:block;
-	border:2px solid red;
+	border:1px dashed red;
 	cursor:pointer;
 	-webkit-transition: background .3s linear;
 			transition: backround .3s linear;
 	text-decoration:none;
+	background:white;
 }
 #langdalehall{
 	top:445px;
 	left:255px;
+}
+
+#librarynorth{
+	top:470px;
+	left:282px;
 }
 
 .innerpopup{
