--- a/mapstylesheet.css
+++ b/mapstylesheet.css
@@ -19,7 +19,7 @@ main {
 	display:flex;
 	margin-left:auto;
 	margin-right:auto;
-	height:710px;
+	height:auto;
 	width: 52.1%;
 	position: relative;
 	margin: 0 auto;
@@ -36,6 +36,7 @@ aside{
 
 .interactive {
 	flex-basis: 67%;
+
 }
 
 .popimage {
@@ -51,63 +52,63 @@ aside{
 	background:white;
 }
 #langdalehall{
-	top:445px;
-	left:255px;
+	top:84%;
+	left:38%;
 }
 
 #librarynorth{
-	top:470px;
-	left:284px;
+	top:88.6%;
+	left:42.3%;
 }
 
 #kellhall{
-	top:425px;
-	left:275px;
+	top:80%;
+	left:41.2%;
 }
 
 #artsandhumanities{
-	top:407px;
-	left:288px;
+	top:76.5%;
+	left:43%;
 }
 
 #sparks{
-	top:435px;
-	left:310px;
+	top:82%;
+	left:46%;
 }
 
 #west {
-	top: 484px;
-	left:314px;
+	top:91.5%;
+	left:46.6%;
 }
 
 #urbanlife {
-	top: 505px;
-	left:342px;
+	top:95.5%;
+	left:51%;
 }
 
 #east {
-	top: 479px;
-	left: 364px;
+	top:90.5%;
+	left:54.45%;
 }
 
 #studentrecreation {
-	top: 509px;
-	left: 400px;
+	top:96%;
+	left:59.1%;
 }
 
 #librarysouth {
-	top: 498px;
-	left: 262px;
+	top:93.8%;
+	left:39.11%;
 }
 
 #classroomsouth {
-	top: 476px;
-	left: 242px;
+	top:90.1%;
+	left:36%;
 }
 
 #petit {
-	top: 586px;
-	left: 333px;
+	top:110.6%;
+	left:49.7%;
 }
 
 
